--- a/conf.ini
+++ b/conf.ini
@@ -12,3 +12,10 @@ VideoPortIn   = 2222
 AudioPortIn   = 2224
 ChannelName   = Wydarzenia24
 
+[172.26.9.100:3333]
+StreamName    = 172.26.9.100:3333
+Request       = AddRTPsource
+IPIn          = 172.26.9.100
+VideoPortIn   = 3333
+AudioPortIn   = 3335
+ChannelName   = Wydarzenia24(720)
