--- a/conf.ini
+++ b/conf.ini
@@ -1,6 +1,21 @@
-[127.0.0.1:2222]
+[172.26.9.100:1111]
 Request     = AddRTP
-IPIn        = 127.0.0.1
+IPIn        = 172.26.9.100
+VideoPortIn = 1111
+AudioPortIn = 1113
+ChannelName = PolsatNews
+
+[172.26.9.100:2222]
+Request     = AddRTP
+IPIn        = 172.26.9.100
 VideoPortIn = 2222
 AudioPortIn = 2224
 ChannelName = Wydarzenia24
+
+[172.26.9.100:3333]
+StreamName  = 172.26.9.100:3333
+Request     = AddRTPsource
+IPIn        = 172.26.9.100
+VideoPortIn = 3333
+AudioPortIn = 3335
+ChannelName = Wydarzenia24(720)
