--- a/conf.ini
+++ b/conf.ini
@@ -1,6 +1,5 @@
 [172.26.9.100:1111]
 Request     = AddRTP
 IPIn        = 172.26.9.100
-VideoPortIn = 1111
-AudioPortIn = 1113
+PortIn      = 1111
 ChannelName = PolsatNews
