--- a/conf.ini
+++ b/conf.ini
@@ -1,5 +1,17 @@
-[172.26.9.100:1111]
+[127.0.0.1:1111]
 Request     = AddRTP
-IPIn        = 172.26.9.100
+IPIn        = 127.0.0.1
 PortIn      = 1111
 ChannelName = PolsatNews
+
+[127.0.0.1:2222]
+Request     = AddRTP
+IPIn        = 127.0.0.1
+PortIn      = 2222
+ChannelName = Wydarzenia24
+
+[127.0.0.1:3333]
+StreamName  = 127.0.0.1:3333
+IPIn        = 127.0.0.1
+PortIn      = 3333
+ChannelName = Wydarzenia24(720)
