--- a/conf/webrtc_1.service
+++ b/conf/webrtc_1.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=WebRTCffmpeg_1
+Description=PolsatWebRTCffmpeg_1
 After=NetworkManager-wait-online.service network.target network-online.target dbus.service
 Wants=NetworkManager-wait-online.service network-online.target
 Requires=dbus.service
 
 [Service]
-ExecStart=/home/scripts/./webrtc.sh /home/scripts/./webrtc_1 224.10.11.120:1111 172.26.9.100 1111
+ExecStart=/home/scripts/./polsat_webrtc.sh /home/scripts/./polsat_webrtc_1 224.10.11.120:1111 127.0.0.1 1111
 User=root
 Restart=always
 Type=simple
@@ -13,7 +13,7 @@ RestartSec=10
 StartLimitInterval=10
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=webrtc_1
+SyslogIdentifier=polsat_webrtc_1
 
 [Install]
 WantedBy=multi-user.target
