--- a/conf copy.ini
+++ b/conf copy.ini
@@ -15,3 +15,15 @@ StreamName  = 127.0.0.1:3333
 IPIn        = 127.0.0.1
 PortIn      = 3333
 ChannelName = Wydarzenia24(720)
+
+[127.0.0.1:4444]
+StreamName  = 127.0.0.1:4444
+IPIn        = 127.0.0.1
+PortIn      = 4444
+ChannelName = lipSyncTest
+
+[127.0.0.1:5555]
+StreamName  = 127.0.0.1:5555
+IPIn        = 127.0.0.1
+PortIn      = 5555
+ChannelName = test.mov
