--- a/conf.ini
+++ b/conf.ini
@@ -2,3 +2,8 @@
 IPIn        = 127.0.0.1
 PortIn      = 1111
 ChannelName = PolsatNews
+
+[127.0.0.1:2222]
+IPIn        = 127.0.0.1
+PortIn      = 2222
+ChannelName = Wydarzenia24
