--- a/conf.ini
+++ b/conf.ini
@@ -7,3 +7,18 @@ ChannelName = PolsatNews
 IPIn        = 172.26.9.100
 PortIn      = 2222
 ChannelName = Wydarzenia24
+
+[172.26.9.100:3333]
+IPIn        = 172.26.9.100
+PortIn      = 3333
+ChannelName = Wydarzenia24(720)
+
+[172.26.9.100:4444]
+IPIn        = 172.26.9.100
+PortIn      = 4444
+ChannelName = lipSyncTest
+
+[172.26.9.100:5555]
+IPIn        = 172.26.9.100
+PortIn      = 5555
+ChannelName = test.mov
