--- a/conf.ini
+++ b/conf.ini
@@ -21,4 +21,4 @@ ChannelName = lipSyncTest
 [172.26.9.100:5555]
 IPIn        = 172.26.9.100
 PortIn      = 5555
-ChannelName = test2.mp4
+ChannelName = test.mov
