--- a/conf.ini
+++ b/conf.ini
@@ -1,4 +1,9 @@
-[224.11.11.1:1111]
-IPIn        = 224.11.11.1
+[127.0.0.1:1111]
+IPIn        = 127.0.0.1
 PortIn      = 1111
 ChannelName = PolsatNews
+
+[127.0.0.1:2222]
+IPIn        = 127.0.0.1
+PortIn      = 2222
+ChannelName = Wydarzenia24
