--- a/conf/etc/systemd/system/polsat_player.service
+++ b/conf/etc/systemd/system/polsat_player.service
@@ -1,11 +1,12 @@
 [Unit]
-Description=polsat_restream_1
+Description=PolsatWebRTCplayer
 After=NetworkManager-wait-online.service network.target network-online.target dbus.service
 Wants=NetworkManager-wait-online.service network-online.target
 Requires=dbus.service
 
 [Service]
-ExecStart=/home/scripts/./polsat_restream.sh /home/scripts/./polsat_restream_1 224.10.11.120:1111 224.11.11.1:1111
+WorkingDirectory=/usr/local/go/src/github.com/SugierPawel/player/
+ExecStart=/usr/local/go/src/github.com/SugierPawel/player/player
 User=root
 Restart=always
 Type=simple
@@ -13,7 +14,7 @@ RestartSec=10
 StartLimitInterval=10
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=polsat_restream_1
+SyslogIdentifier=polsat_player
 
 [Install]
 WantedBy=multi-user.target
