--- a/conf/etc/turnserver.conf
+++ b/conf/etc/turnserver.conf
@@ -24,8 +24,8 @@ mobility
 keep-address-family
 total-quota=100
 
-cert=/SSL/certbundle.pem
-pkey=/SSL/polsat_2020_RSA.key
+cert=/home/SSL/certbundle.pem
+pkey=/home/SSL/polsat_2020_RSA.key
 cipher-list="ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384"
 
 proc-user=root
